[package]
name = "ics10-grandpa-light-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ibc protocol crates
ibc = { version = "0.19.0", default-features = false, git = "https://github.com/cosmos/ibc-rs.git"}
ibc-proto = { version = "0.20.1", default-features = false }
serde = { version = "1.0", default-features = false }
prost = { version = "0.11", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
serde_derive = { version = "1.0.104", default-features = false }
bytes = { version = "1.2.1", default-features = false }

# substrate crates
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-trie = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
sp-std = { version = "4.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
beefy-light-client = { git = "https://github.com/octopus-network/beefy-light-client.git", branch = "main", default-features = false }


# just for dev tests
[dev-dependencies]
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}

[features]
default = ["std"]
std = [
    "ibc/std",
    "ibc-proto/std",
    "serde/std",
    "prost/std",
    "flex-error/std",
    "bytes/std",
    "beefy-light-client/std",
    "codec/std",
    "sp-trie/std",
    "sp-std/std",
    "hash-db/std",
]

[patch.crates-io]
# "Update protos to IBC-Go v5.0.0 and Cosmos SDK v0.46.1"
# [rev](https://github.com/cosmos/ibc-proto-rs/commit/65c050e3a20e3a1ef3c1247788b5013112e207d7)
ibc-proto = { git = "https://github.com/cosmos/ibc-proto-rs", rev = "65c050e3a20e3a1ef3c1247788b5013112e207d7" }