[workspace]
members =  [
    "ics10-grandpa-client",
]

[patch.crates-io]
# "Update protos to IBC-Go v5.0.0 and Cosmos SDK v0.46.1"
# [rev](https://github.com/cosmos/ibc-proto-rs/commit/65c050e3a20e3a1ef3c1247788b5013112e207d7)
#ibc-proto = { git = "https://github.com/cosmos/ibc-proto-rs", branch = "dev"}
ibc-proto = { git = "https://github.com/octopus-network/ibc-proto-rs.git", branch = "dev" }