[package]
name = "ics10-grandpa-light-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json  = { version = "1", default-features = false}
# ibc protocol crates
ibc = { version = "0.34.0", default-features = false }
ibc-proto = { version = "0.26", default-features = false }
serde = { version = "1.0", default-features = false }
prost = { version = "0.11", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
serde_derive = { version = "1.0.104", default-features = false }
bytes = { version = "1.2.1", default-features = false }

# substrate crates
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-trie = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
sp-std = { version = "4.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
beefy-light-client = { git = "https://github.com/octopus-network/beefy-light-client.git", branch = "main", default-features = false }
beefy-merkle-tree = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", features = ["keccak"], default-features = false }
sp-io = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
frame-support = { version = "4.0.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }

# just for dev tests
[dev-dependencies]
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}

[features]
default = ["std"]
std = [
    "serde_json/std",
    "ibc/std",
    "ibc-proto/std",
    "serde/std",
    "prost/std",
    "flex-error/std",
    "bytes/std",
    "beefy-light-client/std",
    "codec/std",
    "sp-trie/std",
    "sp-std/std",
    "hash-db/std",
    "beefy-merkle-tree/std",
    "sp-io/std",
    "sp-core/std",
    "frame-support/std",
    "sp-runtime/std",
]
